kubernetes/ingress/challenge-ingress.yaml
# Crie um ingress(challenge-ingress.yaml) utilizando o ingress-nginx com as entradas:
# Host: app.prova, Backend: simpleapp
# Host: kibana.prova, Backend: kibana
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simpleapp-python-ingress
  namespace: prova
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: app.prova
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: simpleapp-python-service
                port:
                  number: 80
    # - host: kibana.prova
    #   http:
    #     paths:
    #       - path: /logs
    #         pathType: Prefix
    #         backend:
    #           service:
    #             name: kibana-service
    #             port:
    #               number: 8080
